<resources>
    <string name="app_name">星云记账</string>
    <string name="editone">记一笔...</string>
    <string name="month_out">本月支出</string>
    <string name="out">支出</string>
    <string name="month_in">本月收入</string>
    <string name="in">收入</string>
    <string name="budget">预算剩余</string>
    <string name="set_budget">设置预算</string>
    <string name="see_excel">查看图表分析</string>
    <string name="add_remark">添加备注</string>
    <string name="remark">备注</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="history_record">账单记录</string>
    <string name="account_info">账单详情</string>
    <string name="please_input_time">请输入时间(24小时制)</string>
    <string name="please_search_info">请输入搜索信息</string>
    <string name="date_empty">数据为空，无此类记录~~</string>
    <string name="chart_info">账单详情</string>

    <string name="about_appinfo">应用信息</string>
    <string name="about_version">版本</string>
    <string name="about_1">1.0</string>
    <string name="about_app">关于应用</string>
    <string name="about_balabala">学会这个项目,就能够理解Activity，Fragment，数据库等相关内容，好好学习吧！</string>
    <string name="about_developer">开发者</string>
    <string name="about_me">关于我们</string>
    <string name="about_loc">武大软件工程大二在校生。</string>
    <string name="about_email">发送邮箱</string>
    <string name="about_email2">我们的邮箱是:*******,有问题可以找我们！</string>
    <string name="about_code">源代码</string>
    <string name="about_codeinfo">我的代码地址为：*********************</string>
    <string name="about_B">github地址</string>
    <string name="about_B2">我们的github地址为：*********************</string>

    <string name="history_info">本月账单记录</string>
    <string name="clear_all">清空所有记录</string>
    <string name="music_player_title">背景音乐</string>
    <string name="music_player_btn1">播放</string>
    <string name="music_player_btn2">暂停</string>
    <string name="music_name_title">当前正在播放：</string>
    <string name="music1">切换至BGM：红色高跟鞋（纯音乐）【默认】</string>
    <string name="music2">切换至BGM：未闻花名（纯音乐）</string>
    <string name="music3">切换至BGM：一天一天（纯音乐）</string>
    <string name="music4">切换至BGM：夏日蝉鸣（纯音乐）</string>
    <string name="music5">切换至BGM：萤火虫（纯音乐）</string>
    <string name="music6">切换至BGM：Landslide（纯音乐）</string>
    <string name="music7">切换至BGM：世界这么大还是遇见你（纯音乐）</string>
    <string name="music8">切换至BGM：幻昼（纯音乐）</string>
    <string name="music9">切换至BGM：我太笨（纯音乐）</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="not_data">暂无数据</string>
</resources>
