<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f3f3f3"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/chart_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/it_back"
            android:layout_marginLeft="10dp"
            android:onClick="onClick"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/music_player_title"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/music_player_title"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/current_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music_name_title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@color/white"/>
    <TextView
        android:id="@+id/current_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@color/white"/>
    <TextView
        android:id="@+id/setting_music1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music1"
        android:onClick="onClick"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@color/grey_817070"/>
    <TextView
        android:id="@+id/setting_music2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music2"
        android:onClick="onClick"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@color/grey_817070"/>
    <TextView
        android:id="@+id/setting_music3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music3"
        android:onClick="onClick"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@color/grey_817070"/>
    <TextView
        android:id="@+id/setting_music4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music4"
        android:onClick="onClick"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@color/grey_817070"/>
    <TextView
        android:id="@+id/setting_music5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/music5"
        android:onClick="onClick"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:background="@color/grey_817070"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">
        <Button
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/music_player_btn1"
            android:background="@drawable/main_recordbtn_bg"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:onClick="onClick"
            android:layout_marginRight="10dp"/>
        <Button
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/music_player_btn2"
            android:background="@drawable/dialog_btn_bg"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:onClick="onClick"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/chart_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>